[gd_scene load_steps=17 format=2]

[ext_resource path="res://assets/scenes/1/Door_Light.png" type="Texture" id=1]
[ext_resource path="res://assets/scenes/1/Background.png" type="Texture" id=2]
[ext_resource path="res://assets/scenes/5/Garage.png" type="Texture" id=3]
[ext_resource path="res://assets/scenes/1/DustOverlay.png" type="Texture" id=4]
[ext_resource path="res://assets/scenes/1/Floor.png" type="Texture" id=5]
[ext_resource path="res://assets/scenes/5/RedDoor.png" type="Texture" id=6]
[ext_resource path="res://assets/scenes/3/DoorOpen.png" type="Texture" id=7]
[ext_resource path="res://assets/scenes/1/Wall.png" type="Texture" id=9]
[ext_resource path="res://Scripts/Garage.gd" type="Script" id=10]
[ext_resource path="res://Scenes/Transition_Scene.tscn" type="PackedScene" id=11]
[ext_resource path="res://Scripts/Control.gd" type="Script" id=12]
[ext_resource path="res://assets/overlays/SaveSpot_Hover.png" type="Texture" id=13]
[ext_resource path="res://assets/overlays/SaveSpot.png" type="Texture" id=14]
[ext_resource path="res://assets/overlays/SaveSpot_Click.png" type="Texture" id=15]
[ext_resource path="res://assets/items/ink.png" type="Texture" id=19]

[sub_resource type="NavigationPolygon" id=1]
vertices = PoolVector2Array( 1127.88, 1047.32, 1147.36, 1087.78, -62.0155, 1085.26, 1033.84, 878.746, -79.4502, 752.655, 1033.84, 687.927, 1031.59, 779.969, 1085.93, 919.968, 1120.39, 952.93 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ), PoolIntArray( 4, 5, 6, 2 ), PoolIntArray( 2, 6, 3 ), PoolIntArray( 0, 3, 7, 8 ) ]
outlines = [ PoolVector2Array( -79.4502, 752.655, -62.0155, 1085.26, 1147.36, 1087.78, 1127.88, 1047.32, 1120.39, 952.93, 1085.93, 919.968, 1033.84, 878.746, 1031.59, 779.969, 1033.84, 687.927 ) ]

[node name="Garage" type="Node"]
script = ExtResource( 10 )

[node name="Control" type="Control" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
grow_horizontal = 2
grow_vertical = 2
rect_pivot_offset = Vector2( 954.44, 546.933 )
mouse_filter = 2
mouse_default_cursor_shape = 3
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Area_Move" type="Control" parent="Control"]
anchor_top = 0.887
anchor_right = 0.949
anchor_bottom = 1.001
margin_left = -24.5406
margin_top = -214.113
margin_right = -862.621
margin_bottom = 631.767
rect_rotation = -3.0
rect_scale = Vector2( 1.28, 0.6 )
mouse_default_cursor_shape = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Environment" type="Node" parent="Control"]

[node name="Background" type="Sprite" parent="Control/Environment"]
z_index = -1
texture = ExtResource( 2 )
centered = false

[node name="Floor" type="Sprite" parent="Control/Environment"]
position = Vector2( -316.107, -3288.37 )
rotation = -0.0698132
scale = Vector2( 1.03003, 4.19503 )
z_index = -1
texture = ExtResource( 5 )
centered = false

[node name="Wall" type="Sprite" parent="Control/Environment"]
z_index = -1
texture = ExtResource( 9 )
centered = false

[node name="Garage" type="Sprite" parent="Control/Environment"]
position = Vector2( 959.585, 538.27 )
texture = ExtResource( 3 )

[node name="Door_Light" type="Sprite" parent="Control/Environment" groups=[
"Persist",
]]
position = Vector2( -6.28668, 127.954 )
z_index = -1
texture = ExtResource( 1 )
centered = false

[node name="RedDoor" type="Sprite" parent="Control/Environment"]
position = Vector2( 912.217, 553.759 )
texture = ExtResource( 6 )

[node name="DoorOpen" type="Sprite" parent="Control/Environment"]
visible = false
position = Vector2( 248.138, 326.869 )
texture = ExtResource( 7 )

[node name="Botoes" type="Node" parent="Control"]

[node name="SaveSpot" type="TextureButton" parent="Control/Botoes" groups=[
"Overlayed",
]]
margin_left = 1245.98
margin_top = 583.024
margin_right = 1387.98
margin_bottom = 725.024
hint_tooltip = "Save your Game"
focus_mode = 1
mouse_default_cursor_shape = 16
enabled_focus_mode = 1
texture_normal = ExtResource( 14 )
texture_pressed = ExtResource( 15 )
texture_hover = ExtResource( 13 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Item_Ink" type="TextureButton" parent="Control/Botoes" groups=[
"Overlayed",
]]
margin_left = 1449.17
margin_top = 941.483
margin_right = 1515.17
margin_bottom = 1007.48
hint_tooltip = "3x Ink
Is used to save the game"
focus_mode = 1
mouse_default_cursor_shape = 2
enabled_focus_mode = 1
texture_normal = ExtResource( 19 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Door" type="TextureButton" parent="Control/Botoes"]
margin_top = 550.0
margin_right = 246.0
margin_bottom = 1091.0
hint_tooltip = "It's a door"
focus_mode = 1
mouse_default_cursor_shape = 2
enabled_focus_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RedDoor" type="TextureButton" parent="Control/Botoes"]
margin_left = 251.0
margin_top = 213.0
margin_right = 606.0
margin_bottom = 747.0
mouse_default_cursor_shape = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Navigation2D" type="Navigation2D" parent="Control"]
position = Vector2( 1.69409, -4.51978 )
z_index = -1
z_as_relative = false

[node name="NavigationPolygonInstance" type="NavigationPolygonInstance" parent="Control/Navigation2D"]
position = Vector2( 115.817, -1.78174 )
z_index = -1
z_as_relative = false
navpoly = SubResource( 1 )

[node name="Line2D" type="Line2D" parent="Control"]
position = Vector2( 1319.2, 1013.98 )
z_index = 5
points = PoolVector2Array( -1317.79, -1013.58 )

[node name="DustOverlay" type="Sprite" parent="."]
position = Vector2( 958.415, 541.945 )
z_index = 5
texture = ExtResource( 4 )
flip_h = true

[node name="Transition_Scene" parent="." instance=ExtResource( 11 )]
[connection signal="pressed" from="Control/Botoes/SaveSpot" to="." method="_on_SaveSpot_pressed"]
[connection signal="pressed" from="Control/Botoes/Item_Ink" to="." method="_on_Item_Ink_pressed"]
[connection signal="pressed" from="Control/Botoes/Door" to="." method="_on_Door_pressed"]
[connection signal="pressed" from="Control/Botoes/RedDoor" to="." method="_on_RedDoor_pressed"]
[connection signal="transitioned" from="Transition_Scene" to="." method="_on_Transition_Scene_transitioned"]
